* Added German translation.
* A lot of fixes.
*** eiskaltdcpp-qt ***
* New chat command: /dcpps (change core settings).
* Finished transfers: async loading from database.
* Wildcard search in ShareBrowser.
*** eiskaltdcpp-gtk ***
* New chat command: /ip (IPFilter rules), /ratio, /version.
* Save download/upload statistic between sessions. 
*** eiskaltdcpp-daemon ***
* Search support.
* New XML-RPC methods.

--- 2.2.2 2011-04-24 ---
*** common changes ***
* Partial synchronization with DC++ kernel (0.785).
* Align ip-address in a chat (only for monospaced fonts).
* Added configuration options: ENABLE_STACKTRACE, WITH_DEV_FILES and EISKALTDCPP_INCLUDE_DIR.
* Resolving Internationalized Domain Names (libidn is used) [rfc3490]. (Enabled by default, see file INSTALL)
* Possible fix to fix migrating from older releases (<2.1.0) without rehashing.
* Added option of hashing delay on programs startup (60 seconds by default). If the delay is equal -1, hashing process will not be resumed. This option is very useful to accelerate GUI launching, because it is not waiting DC++ kernel.
* Added separate file for logging completely finished downloads.
* Ability to bind to a network interface.
* Fixes to improve Lua-scripts.
* Bugfixes.
*** eiskaltdcpp-qt ***
* Added ability to build program on Haiku-OS (see file INSTALL).
* Fixed loading of emoticons from emoticon packs. It was support files only in PNG format, but now it can load images in any standart format.
* Improvements in the dialog with black list of search results.
* Fixed highlighting of status messages in a chat: the color is now applied to full message.
* Improvement in the search widget: tooltip shows where is the file located if it exists in the share.
* Ability to specify TLS_PORT equal TCP_PORT was eliminated in the settings dialog. (This was frequent users mistake)