@@ -3,6 +3,10 @@
 *** eiskaltdcpp-qt ***
 *** eiskaltdcpp-gtk ***
 *** eiskaltdcpp-daemon ***
+* Новые методы XML-RPC.
+* Полный список доступных сейчас методов:
+  magnet.add, demon.stop, hub.del, hub.say, hub.pm, hub.list, hub.retchat, share.add, share.rename, share.del, share.list, share.refresh
+* Веб-интерфейса для управления демоном все еще нет.
 
 --- 2.2.2 2011-04-24 ---
 *** common changes ***
