@@ -3,6 +3,10 @@
 *** eiskaltdcpp-qt ***
 *** eiskaltdcpp-gtk ***
 *** eiskaltdcpp-daemon ***
+* Нові методи XML-RPC.
+* Повний список доступних зараз методів:
+  magnet.add, demon.stop, hub.del, hub.say, hub.pm, hub.list, hub.retchat, share.add, share.rename, share.del, share.list, share.refresh
+* Веб-інтерфейсу для управління демоном все ще немає.
 
 --- 2.2.2 2011-04-24 ---
 *** common changes ***
