@@ -294,7 +294,7 @@ SettingsManager::SettingsManager()
     setDefault(SEGMENT_SIZE, 0);
     setDefault(BIND_IFACE, false);
     setDefault(BIND_IFACE_NAME, "");
-    setDefault(MINIMUM_SEARCH_INTERVAL, 30);
+    setDefault(MINIMUM_SEARCH_INTERVAL, 60);
     setDefault(DYNDNS_SERVER, "checkip.dyndns.org/index.html");
     setDefault(DYNDNS_ENABLE, true);
     setSearchTypeDefaults();
